added DTO, whitelabel error page and changed role limit of supplier entity

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.connection.pool.maxIdleTime=3000
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.show_sql=true
 hibernate.packagesToScan=com.example.Shopping.entity
+
+server.error.whitelabel.enabled=false
