--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,11 @@
 		<java.version>11</java.version>
 		<sonar.organization>nehasinhazem</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+			<jacoco.version>0.8.6</jacoco.version>
+			<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+			<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+			<sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
+			<sonar.language>java</sonar.language>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -79,7 +84,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
-
+			<dependency>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.6</version>
+			</dependency>
 		<dependency>
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
@@ -116,6 +125,39 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.sonarsource.scanner.maven</groupId>
+				<artifactId>sonar-maven-plugin</artifactId>
+				<version>3.3.0.603</version>
+				<executions>
+					<execution>
+						<phase>verify</phase>
+						<goals>
+							<goal>sonar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+				<plugin>
+					<groupId>org.jacoco</groupId>
+					<artifactId>jacoco-maven-plugin</artifactId>
+					<version>${jacoco.version}</version>
+					<executions>
+						<execution>
+							<id>jacoco-initialize</id>
+							<goals>
+								<goal>prepare-agent</goal>
+							</goals>
+						</execution>
+						<execution>
+							<id>jacoco-site</id>
+							<phase>package</phase>
+							<goals>
+								<goal>report</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
 		</plugins>
 	</build>
 
